<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_000_f_238755961_gqrn6iakwtt7yzuuukvowonlenhvzql5__1_"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="650dp"
        android:fontFamily="@font/bungee"
        android:text="@string/Heading"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AgeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="441dp"
        android:ems="10"
        android:hint="@string/Hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading" />

    <TextView
        android:id="@+id/Prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="375dp"
        android:text="@string/Prompt"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading" />

    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@color/grey"
        android:text="@string/Button1"
        android:textColor="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Prompt" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@color/grey"
        android:text="@string/Button2"
        android:textColor="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/generate"
        app:layout_constraintTop_toBottomOf="@+id/AgeInput" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="288dp"
        android:layout_height="224dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="65dp"
        android:contentDescription="@string/BackgroundTextBoxDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeInput"
        app:layout_constraintVertical_bias="0.733"
        app:srcCompat="@android:drawable/dialog_holo_light_frame" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="228dp"
        android:layout_height="56dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="#000000"
        android:hint="@string/Hint2"
        android:textAlignment="center"
        android:textColorHint="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeInput"
        app:layout_constraintVertical_bias="0.372" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="67dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/BookImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.833"
        app:srcCompat="@drawable/books" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="128dp"
        android:layout_height="121dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/PayrollImageDescription"
        app:layout_constraintBottom_toTopOf="@+id/AgeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading"
        app:srcCompat="@drawable/payroll" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="67dp"
        android:layout_height="57dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/BookImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/history_book" />

</androidx.constraintlayout.widget.ConstraintLayout>